--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,8 +1,10 @@
+@import './media-queries';
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  //font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
